# locale

./: CMakeLists.txt  main.cpp  output.txt
